# django_q_dashboard

./: .gitignore  README.md  admin.py  apps.py  dashboard.py  pyproject.toml  selectors.py  services.py  urls.py  views.py
templates/admin/django_q/: _queue_depth_card.html  _queued_tasks_card.html  _queued_tasks_poll_response.html  app_index.html  queue_dashboard.html
templatetags/: queue_dashboard.py
