[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "django-q-dashboard"
version = "0.1.0"
description = "Unfold-styled admin dashboard for django-q2 queue, cluster and task monitoring."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=4.2",
    "django-q2>=1.6",
    "django-unfold>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-django"]

[tool.setuptools]
package-dir = {"django_q_dashboard" = "."}
packages = ["django_q_dashboard", "django_q_dashboard.templatetags"]
include-package-data = true

[tool.setuptools.package-data]
django_q_dashboard = ["templates/admin/django_q/*.html"]
